--- a/V3 - GPT-neo/chatbot_v3.ipynb
+++ b/V3 - GPT-neo/chatbot_v3.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "source": [
+    "import math\r\n",
     "from transformers import GPTNeoForCausalLM, GPT2Tokenizer\r\n",
-    "import torch"
+    "import torch\r\n",
+    "from psutil import virtual_memory"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "source": [
-    "model_name = \"EleutherAI/gpt-neo-2.7B\"\r\n",
-    "model = GPTNeoForCausalLM.from_pretrained(model_name)"
+    "mem = virtual_memory()\r\n",
+    "mem.total\r\n",
+    "\r\n",
+    "ram = math.ceil(mem.total / pow(1024,3))\r\n",
+    "print(\"Total available physical memory: {} GB\".format(ram))"
    ],
    "outputs": [
     {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'GPTNeoForCausalLM' is not defined",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10248/3747277709.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mmodel_name\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"EleutherAI/gpt-neo-2.7B\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGPTNeoForCausalLM\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_pretrained\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'GPTNeoForCausalLM' is not defined"
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Total available physical memory: 16 GB\n"
      ]
     }
    ],
@@ -34,58 +35,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "source": [
+    "if(ram > 20):\r\n",
+    "    model_name = \"EleutherAI/gpt-neo-2.7B\"\r\n",
+    "elif(ram > 12):\r\n",
+    "    model_name = \"EleutherAI/gpt-neo-1.3B\"\r\n",
+    "else:\r\n",
+    "    model_name = \"EleutherAI/gpt-neo-125M\"\r\n",
+    "\r\n",
+    "model_name"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'EleutherAI/gpt-neo-125M'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "model = GPTNeoForCausalLM.from_pretrained(model_name)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Downloading: 100%|██████████| 1.01k/1.01k [00:00<00:00, 511kB/s]\n",
+      "Downloading: 100%|██████████| 526M/526M [01:02<00:00, 8.42MB/s]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "source": [
     "tokenizer = GPT2Tokenizer.from_pretrained(model_name)"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "prompt = str(input(\"What do you want to say ?\"))"
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Downloading: 100%|██████████| 899k/899k [00:04<00:00, 193kB/s]\n",
+      "Downloading: 100%|██████████| 456k/456k [00:02<00:00, 212kB/s]\n",
+      "Downloading: 100%|██████████| 357/357 [00:00<00:00, 367kB/s]\n",
+      "Downloading: 100%|██████████| 560/560 [00:00<00:00, 189kB/s]\n"
+     ]
+    }
    ],
-   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "source": [
-    "output_length = int(input(\"How long should the generated output be? (Max 2048 tokens)\"))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
+    "prompt = \"\"\r\n",
+    "output_length = 0\r\n",
     "\r\n",
-    "gen_tokens = model.generate(input_ids, do_sample=True, temperature=0.9, max_length=output_length)"
+    "while(True):\r\n",
+    "    prompt = str(input(\"User -->  \"))\r\n",
+    "    if(prompt == \"bye\"):\r\n",
+    "        break\r\n",
+    "    output_length = int(input(\"How long should the generated output be ? \"))\r\n",
+    "    input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\r\n",
+    "    gen_tokens = model.generate(input_ids, do_sample=True, temperature=0.9, max_length=output_length)\r\n",
+    "    gen_text = tokenizer.batch_decode(gen_tokens)[0]\r\n",
+    "    print(gen_text)"
    ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "gen_text = tokenizer.batch_decode(gen_tokens)[0]\r\n",
-    "print(gen_text)"
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "what is your favorite movie?\n",
+      "<tahoe> im on ubuntu server 15.04\n",
+      "<bazhang> hi, how can i send mail (or maybe a message) to a server?\n",
+      "<bazhang> what\n"
+     ]
+    }
    ],
-   "outputs": [],
    "metadata": {}
   }
  ],
