--- a/V1 - Sklearn Pipeline/chatbot_v1.ipynb
+++ b/V1 - Sklearn Pipeline/chatbot_v1.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.5 64-bit"
+   "display_name": "Python 3.9.7 64-bit"
   },
   "interpreter": {
-   "hash": "367a22c48e1536de14b506075fd69e0d92bf674c877f2d865483f55089c9211f"
+   "hash": "bf4dc6d344b952d756644de817bd34180bf4dc346a1eded414a4dd9f51dca411"
   }
  },
  "nbformat": 4,
@@ -26,46 +26,148 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import string\n",
-    "from nltk.corpus import stopwords\n",
-    "import pandas as pd\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.feature_extraction.text import TfidfTransformer, TfidfVectorizer\n",
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "df = pd.read_csv('./datasets/dialogs.txt', sep='\\t')"
-   ]
+    "import numpy as np\r\n",
+    "import string\r\n",
+    "from nltk.corpus import stopwords\r\n",
+    "!pip install pandas\r\n",
+    "import pandas as pd\r\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\r\n",
+    "from sklearn.tree import DecisionTreeClassifier\r\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer, TfidfVectorizer\r\n",
+    "from sklearn.pipeline import Pipeline"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-1.3.3-cp39-cp39-win_amd64.whl (10.2 MB)\n",
+      "Requirement already satisfied: python-dateutil>=2.7.3 in c:\\users\\raka2\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2.8.2)\n",
+      "Requirement already satisfied: pytz>=2017.3 in c:\\users\\raka2\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (2021.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\raka2\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from pandas) (1.19.5)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\raka2\\appdata\\local\\programs\\python\\python39\\lib\\site-packages (from python-dateutil>=2.7.3->pandas) (1.15.0)\n",
+      "Installing collected packages: pandas\n",
+      "Successfully installed pandas-1.3.3\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 5,
+   "source": [
+    "df = pd.read_csv('dataset/dialogs.txt', sep='\\t')"
+   ],
    "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "source": [
     "a = pd.Series(df.columns)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 7,
+   "source": [
+    "df"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>hi, how are you doing?</th>\n",
+       "      <th>i'm fine. how about yourself?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i'm fine. how about yourself?</td>\n",
+       "      <td>i'm pretty good. thanks for asking.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>i'm pretty good. thanks for asking.</td>\n",
+       "      <td>no problem. so how have you been?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>no problem. so how have you been?</td>\n",
+       "      <td>i've been great. what about you?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>i've been great. what about you?</td>\n",
+       "      <td>i've been good. i'm in school right now.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i've been good. i'm in school right now.</td>\n",
+       "      <td>what school do you go to?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3745</th>\n",
+       "      <td>Let's play a game of TWO TRUTHS and ONE LIE.</td>\n",
+       "      <td>1. I'm an only child. 2. I've never broken a b...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3746</th>\n",
+       "      <td>What color is your mind today?</td>\n",
+       "      <td>Mint green and pastel pink. I'm happy.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3747</th>\n",
+       "      <td>What color is your mind today?</td>\n",
+       "      <td>Purple, it's a happy color for me!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3748</th>\n",
+       "      <td>Mint green and pastel pink. I'm happy.</td>\n",
+       "      <td>Cool. Any particular reason you're happy?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3749</th>\n",
+       "      <td>Purple, it's a happy color for me!</td>\n",
+       "      <td>Cool. Any particular reason you're happy?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3750 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                            hi, how are you doing?  \\\n",
        "0                    i'm fine. how about yourself?   \n",
@@ -94,51 +196,134 @@
        "3749          Cool. Any particular reason you're happy?  \n",
        "\n",
        "[3750 rows x 2 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hi, how are you doing?</th>\n      <th>i'm fine. how about yourself?</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>i'm fine. how about yourself?</td>\n      <td>i'm pretty good. thanks for asking.</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>i'm pretty good. thanks for asking.</td>\n      <td>no problem. so how have you been?</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>no problem. so how have you been?</td>\n      <td>i've been great. what about you?</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>i've been great. what about you?</td>\n      <td>i've been good. i'm in school right now.</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>i've been good. i'm in school right now.</td>\n      <td>what school do you go to?</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3745</th>\n      <td>Let's play a game of TWO TRUTHS and ONE LIE.</td>\n      <td>1. I'm an only child. 2. I've never broken a b...</td>\n    </tr>\n    <tr>\n      <th>3746</th>\n      <td>What color is your mind today?</td>\n      <td>Mint green and pastel pink. I'm happy.</td>\n    </tr>\n    <tr>\n      <th>3747</th>\n      <td>What color is your mind today?</td>\n      <td>Purple, it's a happy color for me!</td>\n    </tr>\n    <tr>\n      <th>3748</th>\n      <td>Mint green and pastel pink. I'm happy.</td>\n      <td>Cool. Any particular reason you're happy?</td>\n    </tr>\n    <tr>\n      <th>3749</th>\n      <td>Purple, it's a happy color for me!</td>\n      <td>Cool. Any particular reason you're happy?</td>\n    </tr>\n  </tbody>\n</table>\n<p>3750 rows × 2 columns</p>\n</div>"
+      ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 7
     }
    ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = a.rename({0: df.columns[0], 1: df.columns[1]})"
-   ]
-  },
-  {
-   "source": [
-    "# Adding some common questions"
-   ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
-   "source": [
-    "df = df.append(a, ignore_index=True)\n",
-    "df.columns = ['Questions', 'Answers']"
-   ],
    "cell_type": "code",
-   "metadata": {},
-   "execution_count": 6,
-   "outputs": []
+   "execution_count": 8,
+   "source": [
+    "a = a.rename({0: df.columns[0], 1: df.columns[1]})"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Adding some common questions"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 9,
+   "source": [
+    "df = df.append(a, ignore_index=True)\r\n",
+    "df.columns = ['Questions', 'Answers']"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "df"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Questions</th>\n",
+       "      <th>Answers</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>i'm fine. how about yourself?</td>\n",
+       "      <td>i'm pretty good. thanks for asking.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>i'm pretty good. thanks for asking.</td>\n",
+       "      <td>no problem. so how have you been?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>no problem. so how have you been?</td>\n",
+       "      <td>i've been great. what about you?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>i've been great. what about you?</td>\n",
+       "      <td>i've been good. i'm in school right now.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>i've been good. i'm in school right now.</td>\n",
+       "      <td>what school do you go to?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3746</th>\n",
+       "      <td>What color is your mind today?</td>\n",
+       "      <td>Mint green and pastel pink. I'm happy.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3747</th>\n",
+       "      <td>What color is your mind today?</td>\n",
+       "      <td>Purple, it's a happy color for me!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3748</th>\n",
+       "      <td>Mint green and pastel pink. I'm happy.</td>\n",
+       "      <td>Cool. Any particular reason you're happy?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3749</th>\n",
+       "      <td>Purple, it's a happy color for me!</td>\n",
+       "      <td>Cool. Any particular reason you're happy?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3750</th>\n",
+       "      <td>hi, how are you doing?</td>\n",
+       "      <td>i'm fine. how about yourself?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3751 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
        "                                     Questions  \\\n",
        "0                i'm fine. how about yourself?   \n",
@@ -167,116 +352,113 @@
        "3750              i'm fine. how about yourself?  \n",
        "\n",
        "[3751 rows x 2 columns]"
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Questions</th>\n      <th>Answers</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>i'm fine. how about yourself?</td>\n      <td>i'm pretty good. thanks for asking.</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>i'm pretty good. thanks for asking.</td>\n      <td>no problem. so how have you been?</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>no problem. so how have you been?</td>\n      <td>i've been great. what about you?</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>i've been great. what about you?</td>\n      <td>i've been good. i'm in school right now.</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>i've been good. i'm in school right now.</td>\n      <td>what school do you go to?</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>3746</th>\n      <td>What color is your mind today?</td>\n      <td>Mint green and pastel pink. I'm happy.</td>\n    </tr>\n    <tr>\n      <th>3747</th>\n      <td>What color is your mind today?</td>\n      <td>Purple, it's a happy color for me!</td>\n    </tr>\n    <tr>\n      <th>3748</th>\n      <td>Mint green and pastel pink. I'm happy.</td>\n      <td>Cool. Any particular reason you're happy?</td>\n    </tr>\n    <tr>\n      <th>3749</th>\n      <td>Purple, it's a happy color for me!</td>\n      <td>Cool. Any particular reason you're happy?</td>\n    </tr>\n    <tr>\n      <th>3750</th>\n      <td>hi, how are you doing?</td>\n      <td>i'm fine. how about yourself?</td>\n    </tr>\n  </tbody>\n</table>\n<p>3751 rows × 2 columns</p>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 7
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def cleaner(x):\n",
-    "    return [a for a in (''.join([a for a in x if a not in string.punctuation])).lower().split()]"
-   ]
-  },
-  {
-   "source": [
-    "# Decision Tree Classifier"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Pipe = Pipeline([\n",
-    "    ('bow', CountVectorizer(analyzer=cleaner)),\n",
-    "    ('tfidf', TfidfTransformer()),\n",
-    "    ('classifier', DecisionTreeClassifier())\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('bow',\n",
-       "                 CountVectorizer(analyzer=<function cleaner at 0x00000226B3B263A0>)),\n",
-       "                ('tfidf', TfidfTransformer()),\n",
-       "                ('classifier', DecisionTreeClassifier())])"
       ]
      },
      "metadata": {},
      "execution_count": 10
     }
    ],
-   "source": [
-    "Pipe.fit(df['Questions'], df['Answers'])"
-   ]
-  },
-  {
-   "source": [
-    "# Talking to Chatbot"
-   ],
-   "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "\"i'm a babysitter.\""
-      ]
-     },
-     "metadata": {},
-     "execution_count": 50
-    }
-   ],
+   "execution_count": 11,
    "source": [
-    "Pipe.predict(['What do you do ?'])[0]"
-   ]
+    "def cleaner(x):\r\n",
+    "    return [a for a in (''.join([a for a in x if a not in string.punctuation])).lower().split()]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Decision Tree Classifier"
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
+   "execution_count": 12,
+   "source": [
+    "Pipe = Pipeline([\r\n",
+    "    ('bow', CountVectorizer(analyzer=cleaner)),\r\n",
+    "    ('tfidf', TfidfTransformer()),\r\n",
+    "    ('classifier', DecisionTreeClassifier())\r\n",
+    "])"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "Pipe.fit(df['Questions'], df['Answers'])"
+   ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "\"i'm serious. you deserved this promotion.\""
+       "Pipeline(steps=[('bow',\n",
+       "                 CountVectorizer(analyzer=<function cleaner at 0x000001C673F1FB80>)),\n",
+       "                ('tfidf', TfidfTransformer()),\n",
+       "                ('classifier', DecisionTreeClassifier())])"
       ]
      },
      "metadata": {},
-     "execution_count": 51
+     "execution_count": 13
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Talking to Chatbot"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "source": [
     "Pipe.predict(['Whose babysitter are you ?'])[0]"
-   ]
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"i'm sleepy.\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "Pipe.predict(['i can dance'])[0]"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "\"oh, look. here's another shirt just like it.\""
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "metadata": {}
   }
  ]
 }
